# fortune_good_S

./: README.md  package-lock.json  package.json  pyproject.toml
backend/: .gitignore  db.sqlite3  nginx.conf  pyproject.toml
backend/DailyQuote/: apps.py  models.py  urls.py  views.py
backend/DailyQuote/migrations/: 0001_initial.py
backend/DailyQuote/templates/: todays_smessage.html
backend/config/: base.py  settings.py  urls.py
backend/config/.config_secret/: secret_common.json
backend/templates/: kakao_login.html
backend/users/: admin.py  forms.py  models.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py
constellation/: index.html
frontend/: package.json
frontend/src/: App.css.ts  App.tsx
kakao/: package-lock.json
kakao-login-front/: .eslintrc.js  README.md  nuxt.config.js  package-lock.json  package.json
kakao-login-front/pages/: index.vue  kakao_calback.vue
kakao/public/: Kindex.html
kakaologin/: package-lock.json  package.json
kakaologin/src/: App 2.js  App.js  index.js  login.jsx
kakaologin/src/pages/: kakaologin.js
kakaologin/src/pages/DailyQuote/: App.css  todays-message.js
kakaologin/src/pages/Link/: link.js
kakaologin/src/pages/SlickCarousel/: slick.js
kakaologin/src/pages/SocialKakao/: SocialKakao.js
